<resources>
    <string name="app_name">Vitalsoft</string>

    <string name="email">Email</string>
    <string name="contraseña">Password</string>
    <string name="Login">Login</string>
    <string name="FP">Forget password</string>
    <string name="TC">I accept the terms and conditions.</string>
    <string name="Register">Sign up</string>
    <string name="CP">Confirm password</string>
    <string name="BL">Back to Login</string>


</resources>