<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1ECEC"
    tools:context=".logins.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"

        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/logo">

        </ImageView>
        <EditText
            android:id="@+id/username"
            android:textAlignment="textStart"
            android:paddingLeft="10sp"
            android:textSize="20sp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"

            android:textColor="@color/black"
            android:background="@drawable/borde">

        </EditText>
        <EditText
            android:textAlignment="textStart"
            android:id="@+id/password"

            android:layout_width="300dp"
            android:textSize="20sp"
            android:paddingLeft="10sp"
            android:layout_height="50dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_margin="20sp"
            android:background="@drawable/borde">

        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FP"
            android:textColor="#031CA7"
            android:textAlignment="textEnd">

        </TextView>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:textSize="20sp"
            android:layout_height="50dp"

            android:backgroundTint="#BEBABA"
            android:textColor="@color/black"
            android:text="@string/Login"
            android:layout_marginTop="20dp">

        </Button>
        <Button
            android:id="@+id/signButton"
            android:layout_width="250dp"
            android:textSize="20sp"
            android:layout_height="50dp"

            android:backgroundTint="#BEBABA"
            android:textColor="@color/black"
            android:text="@string/Register"
            android:layout_marginTop="20dp">

        </Button>

    </LinearLayout>

</LinearLayout>