<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1ECEC"
    tools:context=".logins.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/logo" />

        <!-- Campo para correo electrónico -->
        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="10sp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/borde" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_margin="20sp"
            android:background="@drawable/borde" />

        <EditText
            android:id="@+id/confirmPass"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/contraseña"
            android:inputType="textPassword"
            android:paddingLeft="10sp"
            android:textAlignment="textStart"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:background="@drawable/borde" />

        <CheckBox
            android:id="@+id/TyCCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TC"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="end" />

        <Button
            android:id="@+id/sign"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/Register"
            android:textSize="20sp"
            android:backgroundTint="#BEBABA"
            android:textColor="@color/black"
            android:layout_margin="20dp" />

        <Button
            android:id="@+id/backLogin"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/BL"
            android:textSize="20sp"
            android:backgroundTint="#BEBABA"
            android:textColor="@color/black"
            android:layout_gravity="center" />

    </LinearLayout>

</LinearLayout>
